# upi-web

./: .dockerignore  .env.docker.example  .env.example  .gitignore  1_CLICK_VPS_SETUP.bat  AGENTS.md  CLAUDE.md  Dockerfile  README.md  START_TUNNEL.bat  __init__.py  __main__.py  _browser_form.py  _browser_retry.py  _expire_check.py  _nextauth_bootstrap.py  browser_phase.py  cli.py  config.py  docker-compose.yml  docker-entrypoint.sh  dongvanfb.html  entry.js  extract.py  gpt_signup_hybrid.py  http_phase.py  install_vps.bat  mail_providers.py  mfa_phase.py  models.py  openai_sentinel_quickjs.js  outlook_pool.py  pay_upi_http.py  payment_link.py  query.py  random_profile.py  read_mail_box.js  record_india.py  record_pay_upi.py  request_phase.py  (+17 more)
autoreg/: __init__.py  runner.py  schemas.py
codex_auth/: __init__.py  __main__.py  browser.py  errors.py  oauth.py  pkce.py  runner.py
db/: __init__.py  engine.py  migrate.py  repositories.py  schema.py
docs/: README.md  code-standards.md  codebase-summary.md  deployment-guide.md  pay_upi_runbook.md  project-overview-pdr.md  project-roadmap.md  system-architecture.md  upi-rust-bot-port-report.md  upi_qr_api.md
frontend/: _preview.html  app.js  config.js  dialog.js  i18n.js  index.html  layout-theme.css  link.js  operations.css  session.js  settings.js  settings_panel.js  style.css  upi.js  vercel.json  workspace.css  workspace.js
icloud_hme/: README.md  __init__.py  __main__.py  add_profile.py  bootstrap.py  checker.py  cli.py  client.py  (+12 more)
rust_upi_bot/: Cargo.toml
rust_upi_bot/scripts/: deploy.sh  upi-qr-bot.env.example  upi-qr-bot.init
rust_upi_bot/src/: http.rs  main.rs  random_profile.rs  settings.rs  stripe_token.rs  user_agent.rs
rust_upi_bot/src/bot/: limiter.rs  mod.rs  queue.rs  registry.rs  session_buffer.rs  telegram.rs
rust_upi_bot/src/stripe/: bundles.rs  forms.rs  mod.rs
rust_upi_bot/src/upi/: endpoints.rs  matchers.rs  mod.rs  qr.rs  runner.rs  types.rs
(+144 files in other folders)
