[package]
name = "upi-qr-bot"
version = "0.1.0"
edition = "2021"
description = "UPI QR runner Telegram bot — Rust port of web/upi_runner.py for OpenWrt aarch64 routers"

[[bin]]
name = "upi-qr-bot"
path = "src/main.rs"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "time", "sync", "signal", "io-util", "net"] }

# HTTP client — reqwest + rustls cho cross-compile aarch64-musl ổn định
# Chrome UA + headers chuẩn, không cần JA3 spoof vì Stripe/ChatGPT API
# layer accept TLS standard.
reqwest = { version = "0.12", default-features = false, features = ["json", "cookies", "socks", "gzip", "brotli", "rustls-tls-native-roots", "stream", "multipart"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_urlencoded = "0.7"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Settings store
rusqlite = { version = "0.32", features = ["bundled"] }

# QR rendering
qrcode = { version = "0.14", default-features = false, features = ["image"] }
image = { version = "0.25", default-features = false, features = ["png"] }
font8x8 = { version = "0.3", default-features = false, features = ["unicode"] }

# Crypto / encoding
base64 = "0.22"
sha2 = "0.10"
percent-encoding = "2"

# Utility
uuid = { version = "1", features = ["v4"] }
regex = "1"
once_cell = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Time
chrono = { version = "0.4", default-features = false, features = ["clock"] }
rand = "0.8"

# Cancellation token cho /stop per-user
tokio-util = "0.7"

# bytes
bytes = "1"
url = "2"
futures-util = "0.3"
